--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -7,7 +7,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %5p %c{10
 log4j.appender.file = org.apache.log4j.DailyRollingFileAppender
 log4j.appender.file.Threshold = info
 log4j.appender.file.Append = true
-log4j.appender.file.File = ../logs/cuteinfo.log
+log4j.appender.file.File = ../logs/essay.log
 #log4j.appender.file.MaxFileSize=100KB
 #log4j.appender.file.ImmediateFlush = true 
 log4j.appender.file.DatePattern = '.'yyyyMMdd'.log' 
