--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,21 @@
 		<artifactId>zookeeper</artifactId>
 		<version>3.4.6</version>
 	</dependency>
+	<dependency>
+		<groupId>org.apache.curator</groupId>
+		<artifactId>curator-framework</artifactId>
+		<version>2.7.1</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.curator</groupId>
+		<artifactId>curator-recipes</artifactId>
+		<version>2.7.1</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.curator</groupId>
+		<artifactId>curator-test</artifactId>
+		<version>2.7.1</version>
+	</dependency>
   </dependencies>
   
 </project>
