--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -17,4 +17,5 @@ log4j.appender.file.layout.ConversionPattern = %d{yyyy-MM-dd HH:mm:ss} %5p %c{10
 #WEB-INF set log levels - for more verbose logging change 'info' to 'debug'
 log4j.logger.com.danga.MemCached.MemCachedClient=WARN
 
-log4j.rootLogger=info, stdout, file
+#log4j.rootLogger=info, stdout, file
+log4j.rootLogger=info, stdout
