--- a/pom.xml
+++ b/pom.xml
@@ -44,16 +44,19 @@
 		<artifactId>commons-logging</artifactId>
 		<version>1.1.1</version>
 	</dependency>
+	
 	<dependency>
 		<groupId>junit</groupId>
 		<artifactId>junit</artifactId>
 		<version>4.10</version>
 	</dependency>
+	
 	<dependency>
 		<groupId>log4j</groupId>
 		<artifactId>log4j</artifactId>
 		<version>1.2.16</version>
 	</dependency>
+	
 	<dependency>
 		<groupId>org.slf4j</groupId>
 		<artifactId>slf4j-api</artifactId>
@@ -64,11 +67,13 @@
 		<artifactId>slf4j-log4j12</artifactId>
 		<version>1.6.1</version>
 	</dependency>
+	
 	<dependency>
 		<groupId>org.apache.zookeeper</groupId>
 		<artifactId>zookeeper</artifactId>
 		<version>3.4.6</version>
 	</dependency>
+	
 	<dependency>
 		<groupId>org.apache.curator</groupId>
 		<artifactId>curator-framework</artifactId>
@@ -84,6 +89,23 @@
 		<artifactId>curator-test</artifactId>
 		<version>2.7.1</version>
 	</dependency>
+	<dependency>
+		<groupId>org.apache.curator</groupId>
+		<artifactId>curator-x-discovery</artifactId>
+		<version>2.7.1</version>
+	</dependency>
+	
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-core</artifactId>
+		<version>2.4.4</version>
+	</dependency>
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-databind</artifactId>
+		<version>2.4.4</version>
+	</dependency>
+	
   </dependencies>
   
 </project>
