--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,25 @@
 		<version>2.2.1</version>
 	</dependency>
 	
+	<dependency>
+		<groupId>org.apache.hadoop</groupId>
+		<artifactId>hadoop-common</artifactId>
+		<version>2.6.4</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.hadoop</groupId>
+		<artifactId>hadoop-hdfs</artifactId>
+		<version>2.6.4</version>
+	</dependency>
+	<!-- 指定maven加载的tools.jar的路径 -->
+	<dependency>
+	    <groupId>jdk.tools</groupId>
+	    <artifactId>jdk.tools</artifactId>
+	    <version>1.7</version>
+	    <scope>system</scope>
+	    <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
+	</dependency>
+	
   </dependencies>
   
 </project>
