--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,34 @@
 	    <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
 	</dependency>
 	
+	<!-- 
+		memcached 客户端jar，手工加入本地仓库 
+		命令为：mvn install:install-file -Dfile=java_memcached-release_2.6.6.jar 
+			-DgroupId=memcached -DartifactId=memcached -Dversion=2.6.6 -Dpackaging=jar -DgeneratePom=true
+		
+		由于memcached 客户端依赖slf4j-simple、slf4j-api、commons-pool这三个jar包，需要在pom.xml中增加
+		<dependency>  
+	        <groupId>org.slf4j</groupId>  
+	        <artifactId>slf4j-simple</artifactId>  
+	        <version>1.6.2</version>  
+	    </dependency>  
+	    <dependency>  
+	        <groupId>org.slf4j</groupId>  
+	        <artifactId>slf4j-api</artifactId>  
+	        <version>1.6.2</version>  
+	    </dependency>  
+	    <dependency>  
+	        <groupId>commons-pool</groupId>  
+	        <artifactId>commons-pool</artifactId>  
+	        <version>1.5.6</version>  
+	    </dependency> 
+	 -->
+	<dependency>
+	   <groupId>memcached</groupId>
+	   <artifactId>memcached</artifactId>
+	   <version>2.6.6</version>
+	</dependency>
+	
   </dependencies>
   
 </project>
