--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,12 @@
 	   <version>2.6.6</version>
 	</dependency>
 	
+	<dependency>
+		<groupId>redis.clients</groupId>
+		<artifactId>jedis</artifactId>
+		<version>2.8.0</version>
+	</dependency>
+	
   </dependencies>
   
 </project>
