--- a/pom.xml
+++ b/pom.xml
@@ -228,6 +228,16 @@
 	    <artifactId>commons-dbcp</artifactId>
 	    <version>1.2.2</version>
 	</dependency>
+	<dependency>
+	    <groupId>jstl</groupId>
+	    <artifactId>jstl</artifactId>
+	    <version>1.2</version>
+	</dependency>
+	<dependency>
+	    <groupId>taglibs</groupId>
+	    <artifactId>standard</artifactId>
+	    <version>1.1.2</version>
+	</dependency>
 	
   </dependencies>
   
