--- a/pom.xml
+++ b/pom.xml
@@ -258,6 +258,11 @@
 	    <artifactId>jackson-annotations</artifactId>
 	    <version>2.7.3</version>
 	</dependency>
+	<dependency>
+	    <groupId>commons-beanutils</groupId>
+	    <artifactId>commons-beanutils</artifactId>
+	    <version>1.9.2</version>
+	</dependency>
 	
   </dependencies>
   
