--- a/pom.xml
+++ b/pom.xml
@@ -270,6 +270,12 @@
 	    <version>1.6.1</version>
 	</dependency>
 	
+	<dependency>
+	    <groupId>io.netty</groupId>
+	    <artifactId>netty-all</artifactId>
+	    <version>5.0.0.Alpha1</version>
+	</dependency>
+	
   </dependencies>
   
 </project>
