--- a/pom.xml
+++ b/pom.xml
@@ -276,6 +276,12 @@
 	    <version>5.0.0.Alpha1</version>
 	</dependency>
 	
+	<dependency>
+	    <groupId>com.google.protobuf</groupId>
+	    <artifactId>protobuf-java</artifactId>
+	    <version>3.0.0</version>
+	</dependency>
+	
   </dependencies>
   
 </project>
