--- a/pom.xml
+++ b/pom.xml
@@ -282,6 +282,17 @@
 	    <version>3.0.0</version>
 	</dependency>
 	
+	<dependency>
+        <groupId>com.alibaba</groupId>
+        <artifactId>fastjson</artifactId>
+        <version>1.2.5</version>
+    </dependency>
+    <dependency>
+        <groupId>org.codehaus.jackson</groupId>
+        <artifactId>jackson-mapper-asl</artifactId>
+        <version>1.9.4</version>
+    </dependency>
+	
   </dependencies>
   
 </project>
