--- a/pom.xml
+++ b/pom.xml
@@ -326,6 +326,19 @@
 	</dependency>
 	<!-- aip 百度文字识别 end -->
 	
+	<!-- HttpClient begin -->
+	<dependency>
+	    <groupId>org.apache.httpcomponents</groupId>
+	    <artifactId>httpclient</artifactId>
+	    <version>4.5.2</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.httpcomponents</groupId>
+	    <artifactId>httpcore</artifactId>
+	    <version>4.4.4</version>
+	</dependency>
+	<!-- HttpClient end -->
+	
   </dependencies>
   
 </project>
