--- a/pom.xml
+++ b/pom.xml
@@ -338,7 +338,21 @@
 	    <version>4.4.4</version>
 	</dependency>
 	<!-- HttpClient end -->
-	
+
+	  <!-- jboss-marshalling begin -->
+	  <dependency>
+		  <groupId>org.jboss.marshalling</groupId>
+		  <artifactId>jboss-marshalling</artifactId>
+		  <version>1.3.0.CR9</version>
+	  </dependency>
+      <dependency>
+          <groupId>org.jboss.marshalling</groupId>
+          <artifactId>jboss-marshalling-serial</artifactId>
+          <version>1.3.0.CR9</version>
+          <scope>test</scope>
+      </dependency>
+	  <!-- jboss-marshalling end -->
+
   </dependencies>
   
 </project>
