--- a/pom.xml
+++ b/pom.xml
@@ -337,6 +337,11 @@
 	    <artifactId>httpcore</artifactId>
 	    <version>4.4.4</version>
 	</dependency>
+	<dependency>
+	    <groupId>org.apache.httpcomponents</groupId>
+	    <artifactId>httpmime</artifactId>
+	    <version>4.5.2</version>
+	</dependency>
 	<!-- HttpClient end -->
 
 	  <!-- jboss-marshalling begin -->
@@ -351,6 +356,12 @@
           <version>1.3.0.CR9</version>
       </dependency>
 	  <!-- jboss-marshalling end -->
+	  
+	  <dependency>
+		  <groupId>org.jdom</groupId>
+		  <artifactId>jdom2</artifactId>
+		  <version>2.0.6</version>
+      </dependency>
 
   </dependencies>
   
