--- a/pom.xml
+++ b/pom.xml
@@ -358,6 +358,24 @@
 	</dependency>
 	<!-- spring end -->
 	
+	<!-- spring aop begin -->
+	<dependency>
+	    <groupId>org.aspectj</groupId>
+	    <artifactId>aspectjrt</artifactId>
+	    <version>1.9.2</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.aspectj</groupId>
+	    <artifactId>aspectjweaver</artifactId>
+	    <version>1.9.2</version>
+	</dependency>
+	<dependency>
+	    <groupId>aopalliance</groupId>
+	    <artifactId>aopalliance</artifactId>
+	    <version>1.0</version>
+	</dependency>
+	<!-- spring aop end -->
+	
 	<!-- mybatis begin -->
 	<dependency>
 	    <groupId>org.mybatis</groupId>
