--- a/pom.xml
+++ b/pom.xml
@@ -523,6 +523,13 @@
 		  <artifactId>jdom2</artifactId>
 		  <version>2.0.6</version>
       </dependency>
+      
+      <dependency>
+		  <groupId>net.sourceforge.tess4j</groupId>
+		  <artifactId>tess4j</artifactId>
+		  <version>4.3.0</version>
+	  </dependency>
+      
 
   </dependencies>
   
