--- a/pom.xml
+++ b/pom.xml
@@ -203,7 +203,7 @@
 	<dependency>
 		<groupId>junit</groupId>
 		<artifactId>junit</artifactId>
-		<version>4.10</version>
+		<version>4.12</version>
 	</dependency>
 	<!-- junit end -->
 	
@@ -362,6 +362,11 @@
 	    <artifactId>spring-jdbc</artifactId>
 	    <version>4.3.18.RELEASE</version>
 	</dependency>
+	<dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-test</artifactId>
+        <version>4.3.18.RELEASE</version>
+    </dependency>
 	<!-- spring end -->
 	
 	<!-- spring aop begin -->
@@ -530,6 +535,16 @@
 		  <version>4.3.0</version>
 	  </dependency>
       
+      <dependency>
+          <groupId>org.apache.shiro</groupId>
+          <artifactId>shiro-core</artifactId>
+          <version>1.3.2</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.shiro</groupId>
+          <artifactId>shiro-spring</artifactId>
+          <version>1.3.2</version>
+      </dependency>
 
   </dependencies>
   
