--- a/pom.xml
+++ b/pom.xml
@@ -545,6 +545,12 @@
           <artifactId>shiro-spring</artifactId>
           <version>1.3.2</version>
       </dependency>
+      
+	  <dependency>
+	      <groupId>com.alibaba</groupId>
+	      <artifactId>druid</artifactId>
+	      <version>1.1.16</version>
+	  </dependency>
 
   </dependencies>
   
