--- a/pom.xml
+++ b/pom.xml
@@ -545,6 +545,16 @@
           <artifactId>shiro-spring</artifactId>
           <version>1.3.2</version>
       </dependency>
+      <dependency>
+          <groupId>org.apache.shiro</groupId>
+          <artifactId>shiro-web</artifactId>
+          <version>1.3.2</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.shiro</groupId>
+          <artifactId>shiro-ehcache</artifactId>
+          <version>1.3.2</version>
+      </dependency>
       
 	  <dependency>
 	      <groupId>com.alibaba</groupId>
