--- a/pom.xml
+++ b/pom.xml
@@ -561,6 +561,22 @@
 	      <artifactId>druid</artifactId>
 	      <version>1.1.16</version>
 	  </dependency>
+	  
+      <dependency>
+        <groupId>org.apache.lucene</groupId>
+        <artifactId>lucene-core</artifactId>
+        <version>8.1.1</version>
+      </dependency>
+      <dependency>
+	    <groupId>org.apache.lucene</groupId>
+	    <artifactId>lucene-queryparser</artifactId>
+	    <version>8.1.1</version>
+	  </dependency>
+	  <dependency>
+		<groupId>org.apache.lucene</groupId>
+		<artifactId>lucene-analyzers-common</artifactId>
+		<version>8.1.1</version>
+	  </dependency>
 
   </dependencies>
   
