--- a/pom.xml
+++ b/pom.xml
@@ -250,7 +250,7 @@
 	<dependency>
 		<groupId>org.apache.hadoop</groupId>
 		<artifactId>hadoop-common</artifactId>
-		<version>2.6.4</version>
+		<version>3.2.1</version>
 		<exclusions>
 			<exclusion>
 				<groupId>tomcat</groupId>
@@ -261,7 +261,17 @@
 	<dependency>
 		<groupId>org.apache.hadoop</groupId>
 		<artifactId>hadoop-hdfs</artifactId>
-		<version>2.6.4</version>
+		<version>3.2.1</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.hadoop</groupId>
+	    <artifactId>hadoop-mapreduce-client-core</artifactId>
+	    <version>3.2.1</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.hadoop</groupId>
+	    <artifactId>hadoop-mapreduce-client-common</artifactId>
+	    <version>3.2.1</version>
 	</dependency>
 	<!-- hadoop end -->
 	
@@ -498,17 +508,17 @@
 	<dependency>
 	    <groupId>org.apache.httpcomponents</groupId>
 	    <artifactId>httpclient</artifactId>
-	    <version>4.5.2</version>
+	    <version>4.5.8</version>
 	</dependency>
 	<dependency>
 	    <groupId>org.apache.httpcomponents</groupId>
 	    <artifactId>httpcore</artifactId>
-	    <version>4.4.4</version>
+	    <version>4.4.11</version>
 	</dependency>
 	<dependency>
 	    <groupId>org.apache.httpcomponents</groupId>
 	    <artifactId>httpmime</artifactId>
-	    <version>4.5.2</version>
+	    <version>4.5.8</version>
 	</dependency>
 	<!-- HttpClient end -->
 
@@ -656,7 +666,31 @@
 	    <version>2.10.2</version>
 	  </dependency>
 	  <!-- 冲突的版本升级 end -->
+	  <!-- ES-hadoop begin -->
+      <dependency>
+        <groupId>org.elasticsearch</groupId>
+        <artifactId>elasticsearch-hadoop</artifactId>
+        <version>7.2.1</version>
+      </dependency>
+      <!-- ES-hadoop end -->
 	  <!-- Elasticsearch end -->
+	  
+	  <dependency>
+	    <groupId>com.google.guava</groupId>
+	    <artifactId>guava</artifactId>
+	    <version>28.1-jre</version>
+	  </dependency>
+	  
+	<dependency>
+	    <groupId>commons-httpclient</groupId>
+	    <artifactId>commons-httpclient</artifactId>
+	    <version>3.1</version>
+	</dependency>
+	<dependency>
+	    <groupId>xml-apis</groupId>
+	    <artifactId>xml-apis</artifactId>
+	    <version>1.4.01</version>
+	</dependency>
 
   </dependencies>
   
