--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
         </excludes>
       </resource>
     </resources>
-    
-    <plugins>
+
+<!--    <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.1</version>
@@ -35,10 +35,100 @@
           <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
       </plugin>
-    </plugins>
+    </plugins>-->
+
+	  <plugins>
+		  <plugin>
+			  <artifactId>maven-compiler-plugin</artifactId>
+			  <version>3.1</version>
+			  <configuration>
+				  <source>1.8</source>
+				  <target>1.8</target>
+			  </configuration>
+		  </plugin>
+		  <plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-war-plugin</artifactId>
+			  <version>2.3</version>
+			  <configuration>
+				  <warName>${project.artifactId}</warName>
+				  <!-- 由于不是标准的maven 项目，导致打包时找不到web.xml
+					   默认maven 项目，web.xml 在src/main/webapp 下
+				   -->
+				  <warSourceDirectory>WebContent</warSourceDirectory>
+				  <failOnMissingWebXml>false</failOnMissingWebXml>
+				  <webResources>
+					  <resource>
+						  <directory>lib/</directory>
+						  <targetPath>WEB-INF/lib</targetPath>
+						  <includes>
+							  <include>**/*.jar</include>
+						  </includes>
+					  </resource>
+				  </webResources>
+			  </configuration>
+		  </plugin>
+
+		  <plugin>
+			  <!-- 项目单独打jar包，不包含依赖的jar，依赖的jar放在WEB-INF/lib 下
+			       最终将war包解压，并将项目jar放入lib中，删除classes 文件夹，然后将解压的目录放入tomcat 启动
+			       配置文件也独立与jar包
+			   -->
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-jar-plugin</artifactId>
+			  <version>2.6</version>
+			  <executions>
+				  <execution>
+					  <id>make-a-jar</id>
+					  <phase>compile</phase>
+					  <goals>
+						  <goal>jar</goal>
+						  <goal>test-jar</goal>
+					  </goals>
+					  <configuration>
+						  <includes>
+							  <include>com/**</include>
+						  </includes>
+					  </configuration>
+				  </execution>
+			  </executions>
+		  </plugin>
+
+		  <plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-install-plugin</artifactId>
+			  <executions>
+				  <execution>
+					  <phase>install</phase>
+					  <goals>
+						  <goal>install-file</goal>
+					  </goals>
+					  <configuration>
+						  <packaging>jar</packaging>
+						  <groupId>${project.groupId}</groupId>
+						  <artifactId>${project.artifactId}</artifactId>
+						  <version>${project.version}</version>
+						  <file>
+							  ${project.build.directory}/${project.artifactId}.jar
+						  </file>
+						  <!-- -${project.version} -->
+					  </configuration>
+				  </execution>
+			  </executions>
+		  </plugin>
+
+		  <plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-surefire-plugin</artifactId>
+			  <configuration>
+				  <skip>true</skip>
+			  </configuration>
+		  </plugin>
+
+	  </plugins>
   </build>
   
- <!--  <build>
+<!--   <build>
         <resources>
             <resource>
                 <directory>src/main/java</directory>
@@ -71,6 +161,9 @@
         </resources>
         <plugins>
             <plugin>
+				&lt;!&ndash; 单独将项目打成一个jar包，不包括依赖的jar包，并且配置文件独立与jar包之外
+					 依赖的jar包通过maven-dependency-plugin 打包到lib 目录下
+				&ndash;&gt;
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>2.6</version>
@@ -139,7 +232,7 @@
                 </executions>
             </plugin>
         </plugins>
-    </build> -->
+    </build>-->
   
   <dependencies>
     <!-- log begin -->
